--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,1 +1,1 @@
-I am so-and-so (with your name) and this is my ITIS3135 First Course Page.
+I am Jelani Boone and this is my ITIS3135 First Course Page.
