--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,1 +1,56 @@
-I am JELANI BOONE and this is my ITIS3135 First Course Page.
+<!DOCTYPE html>
+<html lang="en US">
+    <head>
+        <meta charset="utf-8">
+        <title>
+            Jeb's ITIS 3135 HomePage
+        </title>
+
+    </head>
+
+    <body>
+            <header>
+                <h1>
+                    Jeb Boone | ITIS 3135 | Jolly Bobbleheads
+                </h1>
+            </header>
+            <nav>
+            <a href= "index.html">Home</a>
+            " || "
+            </nav>
+            <br>
+
+            <main>
+                <h2>
+                    Welcome
+                </h2>
+                <p>
+                    Hey, this is the beginning of a great site! 
+                </p>
+            </main>
+            <footer>
+                <br>
+                <nav>
+                <a href= "https://webpages.charlotte.edu/jboone31/itis3135/">Charlotte.edu</a>
+                    "&star;"
+                <a href= "https://github.com/JEBoone">Github Profile</a>
+                    "&star;"
+                <a href= "https://JEBoone.github.io">Github.io Repo</a>
+                    "&star;"
+                <a href= "https://JEBoone.github.io/itis3135">ITIS 3135 Pages</a>
+                    "&star;"
+                <a href= "https://app.codingrooms.com/app/course/itis3135-j-Rwrq0">CodeAcademy</a>
+                    "&star;"
+                <a href= "https://www.freecodecamp.org/JEBoone">FreeCodeCamp</a>
+                    "&star;"
+                <a href= "https://www.linkedin.com/in/jelani-boone-8783b5225/">LinkedIn</a>
+                    "&star;"
+                </nav>
+                <br>
+                <p>
+                    Created By
+                </p>
+                <a href= "Jade Bear/brand_index.html">Boone Creations</a>
+            </footer>
+    </body>
+</html>
